--- a/src/flash.scss
+++ b/src/flash.scss
@@ -1,1 +1,11 @@
+//animation
+@import 'src/scss/animation/main';
+
+//utilities
+@import 'src/scss/utilities/main';
+
+//components
 @import 'src/scss/components/main';
+
+//layout
+@import 'src/scss/layout/main';
