--- a/src/scss/components/buttons/_index.scss
+++ b/src/scss/components/buttons/_index.scss
@@ -1,7 +1,7 @@
-@import 'src/scss/utilities/main';
-@import 'src/scss/animation/repple';
+//import everything you need for buttons
 @import 'src/scss/mixins/button';
 
+//import buttons
 @import 'src/scss/components/buttons/button';
 @import 'src/scss/components/buttons/outlined';
 @import 'src/scss/components/buttons/text';
