--- a/src/scss/mixins/_button.scss
+++ b/src/scss/mixins/_button.scss
@@ -1,5 +1,5 @@
 @mixin button(
-    $display: lnline-flex,
+    $display: inline-flex,
     $position: relative,
     $overflow: hidden,
     $background: $primary,
