add align-items &  ! important tag for other

--- a/src/scss/utilities/modifiers/_align-content.scss
+++ b/src/scss/utilities/modifiers/_align-content.scss
@@ -1,27 +1,27 @@
 .align-cont-center {
-    align-content: center;
+    align-content: center !important;
 }
 .align-cont-flex-end {
-    align-content: flex-end;
+    align-content: flex-end !important;
 }
 .align-cont-flex-start {
-    align-content: flex-start;
+    align-content: flex-start !important;
 }
 .align-con-space-around {
-    align-content: space-around;
+    align-content: space-around !important;
 }
 .align-cont-space-between {
-    align-content: space-between;
+    align-content: space-between !important;
 }
 .align-cont-stretch {
-    align-content: stretch;
+    align-content: stretch !important;
 }
 .align-cont-inherit {
-    align-content: inherit;
+    align-content: inherit !important;
 }
 .align-cont-initial {
-    align-content: initial;
+    align-content: initial !important;
 }
 .align-cont-unset {
-    align-content: unset;
+    align-content: unset !important;
 }
