--- a/src/scss/utilities/modifiers/_display.scss
+++ b/src/scss/utilities/modifiers/_display.scss
@@ -1,72 +1,72 @@
 .d-block {
-    display: block;
+    display: block !important;
 }
 .d-contents {
-    display: contents;
+    display: contents !important;
 }
 .d-flex {
-    display: flex;
+    display: flex !important;
 }
 .d-grid {
-    display: grid;
+    display: grid !important;
 }
 .d-inline {
-    display: inline;
+    display: inline !important;
 }
 .d-inherit {
-    display: inherit;
+    display: inherit !important;
 }
 .d-inline-block {
-    display: inline-block;
+    display: inline-block !important;
 }
 .d-inline-flex {
-    display: inline-flex;
+    display: inline-flex !important;
 }
 .d-inline-tab {
-    display: inline-table;
+    display: inline-table !important;
 }
 .d-list-item {
-    display: list-item;
+    display: list-item !important;
 }
 .d-none {
-    display: none;
+    display: none !important;
 }
 .d-tab {
-    display: table;
+    display: table !important;
 }
 .d-tab-caption {
-    display: table-caption;
+    display: table-caption !important;
 }
 .d-tab-cell {
-    display: table-cell;
+    display: table-cell !important;
 }
 .d-tab-col {
-    display: table-column;
+    display: table-column !important;
 }
 .d-tab-col-group {
-    display: table-column-group;
+    display: table-column-group !important;
 }
 .d-tab-header-group {
-    display: table-header-group;
+    display: table-header-group !important;
 }
 .d-tab-footer-group {
-    display: table-footer-group;
+    display: table-footer-group !important;
 }
 .d-tab-row {
-    display: table-row;
+    display: table-row !important;
 }
 .d-tab-row-group {
-    display: table-row-group;
+    display: table-row-group !important;
 }
 .d-webkit-box {
-    display: -webkit-box;
+    display: -webkit-box !important;
 }
 .d-webkit-flex {
-    display: -webkit-flex;
+    display: -webkit-flex !important;
 }
 .d-webkit-inline-box {
-    display: -webkit-inline-box;
+    display: -webkit-inline-box !important;
 }
 .d-webkit-inline-flex {
-    display: -webkit-inline-flex;
+    display: -webkit-inline-flex !important;
 }
