--- a/src/scss/utilities/_main.scss
+++ b/src/scss/utilities/_main.scss
@@ -13,5 +13,8 @@
 //functions
 @import 'src/scss/utilities/functions/contrast';
 
+//screens config
+@import 'src/scss/utilities/screens';
+
 //modifiers
 @import 'src/scss/utilities/modifiers/main';
