--- a/src/scss/utilities/modifiers/_main.scss
+++ b/src/scss/utilities/modifiers/_main.scss
@@ -1,1 +1,4 @@
 @import 'src/scss/utilities/modifiers/display';
+@import 'src/scss/utilities/modifiers/align-content';
+@import 'src/scss/utilities/modifiers/align-items';
+@import 'src/scss/utilities/modifiers/column';
