--- a/src/scss/utilities/_screens.scss
+++ b/src/scss/utilities/_screens.scss
@@ -1,14 +1,11 @@
-$tablet-width: 768px;
-$desktop-width: 1024px;
+$sm: 576px;
+$md: 768px;
+$lg: 992px;
+$xl: 1200px;
+$xxl: 1400px;
 
-@mixin tablet {
-  @media (min-width: #{$tablet-width}) and (max-width: #{$desktop-width - 1px}) {
-    @content;
-  }
-}
-
-@mixin desktop {
-  @media (min-width: #{$desktop-width}) {
+@mixin mediaQuery($width) {
+  @media (min-width: #{$width}) {
     @content;
   }
 }
