--- a/src/scss/components/buttons/_index.scss
+++ b/src/scss/components/buttons/_index.scss
@@ -5,3 +5,5 @@
 @import 'src/scss/components/buttons/button';
 @import 'src/scss/components/buttons/outlined';
 @import 'src/scss/components/buttons/text';
+@import 'src/scss/components/buttons/icon_button';
+@import 'src/scss/components/buttons/outlined-icon-button';
