--- a/src/scss/components/buttons/_outlined.scss
+++ b/src/scss/components/buttons/_outlined.scss
@@ -1,12 +1,11 @@
 .outlined-button {
     @include button(
-        $background: $white,
         $color: $primary,
-        $border: solid 0.1rem $primary
+        $border: solid $border $primary
     );
     &:disabled {
         border: none;
     }
 
-    @include repple-effect;
+    @include reppleEffect;
 }
