--- a/src/scss/utilities/_variables.scss
+++ b/src/scss/utilities/_variables.scss
@@ -11,6 +11,7 @@ $font-family: 'Roboto', sans-serif;
 
 $border-color: $blue;
 $border-radius: 0.3rem;
+$border: 0.12rem;
 
 $button-padding: 0.6rem 1.4rem;
 
