--- a/src/scss/utilities/functions/_contrast.sass
+++ b/src/scss/utilities/functions/_contrast.sass
@@ -22,7 +22,7 @@
   @return (map-get($colors, 'red') * .2126) + (map-get($colors, 'green') * .7152) + (map-get($colors, 'blue') * .0722)
 
 @function colorContrast($color)
-  @if (colorLuminance($color) > 0.2)
+  @if (colorLuminance($color) > 0.2) or $color == transparent
     @return $black
   @else
     @return $white
